--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-{% entends "layout.html" %}
-
+{% extends "layout.html" %}
+{% load staticfiles %}
 {% block content %}
 	<div class="main">
-        <div class="logo" style="background: url({% static 'logo.jpg' %}) center center no-repeat;"></div>
+        <div class="logo" style="background: url({% static 'logo.jpg' %}) center center no-repeat;background-size:contain;"></div>
   			<form class="input-group input-group-lg custom-input-group x-sform">
           <input type="search" class="form-control x-search" placeholder="输入你想要搜索的内容" autocomplete="off">
           <span class="input-group-btn">
-            <button class="btn btn-default" type="button">search!</button>
+            <button class="btn btn-default" type="submit">search!</button>
           </span>
         </form>
   		<!-- 此处关键词推荐觉得没什么软用,先去掉 -->
