--- a/info.html
+++ b/info.html
@@ -13,7 +13,7 @@
     <form class="input-group input-group custom-input-group x-sform">
       <input type="search" class="form-control x-search" placeholder="输入你想要搜索的内容">
       <span class="input-group-btn">
-        <button class="btn btn-default" type="button">search!</button>
+        <button class="btn btn-default" type="submit">search!</button>
       </span>
     </form>
     <div class="container">
@@ -33,7 +33,7 @@
         </li>
         <li class="list-group-item post-btn">
           <a class="btn btn-primary magnet-down" target="_blank">点击下载</a>
-          <a href="javascript;" class="btn btn-success">在线观看</a>
+          <a href="#" class="btn btn-success">在线观看</a>
         </li>
       </ul>
     </div>
@@ -57,7 +57,6 @@
                 $('.magnet-down').attr('href',link2);
             }
         });
-       /* $.get("{% url 'top_log'%}?type=hash&hash={{info.id}}");*/
     }, 100);
   </script>
 {% endblock %}    
