--- a/info.html
+++ b/info.html
@@ -33,7 +33,7 @@
         </li>
         <li class="list-group-item post-btn">
           <a class="btn btn-primary magnet-down" target="_blank">点击下载</a>
-          <a href="javascript;" class="btn btn-success">在线观看</a>
+          <a href="#" class="btn btn-success">在线观看</a>
         </li>
       </ul>
     </div>
