--- a/list.html
+++ b/list.html
@@ -25,7 +25,7 @@
         <ul class="list-group">
           {% for x in result.items %}
           <li class="list-group-item">
-            <h3 class="item-title"><a href="{% url 'hash' x.id%}">{{x.name|highlight:words}}</a></h3>
+            <h4 class="item-title"><a href="{% url 'hash' x.id%}">{{x.name|highlight:words}}</a></h4>
             <ul class="item-list">
               {% if 'files' in x %}
                     {% for y in x.files %}
@@ -37,9 +37,9 @@
                 {% endif %}
             </ul>
             <ul class="item-tail list-inline list-unstyled">
-              <li>总大小：{{x.length|filesizeformat}}</li>
-              <li>文件数：{{x.files|length}}</li>
-              <li>下载热度：{{x.requests}}</li>
+              <li>总大小：<span class="label label-info">{{x.length|filesizeformat}}</span></li>
+              <li>文件数：<span class="label label-success">{{x.files|length}}</span></li>
+              <li>下载热度：<span class="label label-primary">{{x.requests}}</span></li>
               {% if x.maybe_fake %}
                 <li><span class="label label-warning">FAKE!!!</span></li>
               {% endif %}
@@ -57,7 +57,7 @@
         <ul class="pagination custom-pagination">
           {% if p == 1 %}
             <li>
-              <a href="javascript;" class="disabled">&laquo;</a>
+              <a href="#" class="disabled">&laquo;</a>
             </li>
           {% else %}
             <li>
@@ -65,13 +65,13 @@
             </li>
           {%endif%}
           {% for i in prev_pages %}
-          <li class=""><a href="./?c={{category}}&s={{sort}}&p={{i}}"> {{i}} </a></li>
+          <li><a href="./?c={{category}}&s={{sort}}&p={{i}}"> {{i}} </a></li>
           {% endfor %}
 
           <li class="active"><a href="./?c={{category}}&s={{sort}}&p={{g.p}}"> {{p}} <span class="sr-only">(current)</span></a></li>
           
           {% for i in next_pages %}
-          <li class=""><a href="./?c={{category}}&s={{sort}}&p={{i}}"> {{i}} </a></li>
+          <li><a href="./?c={{category}}&s={{sort}}&p={{i}}"> {{i}} </a></li>
           {% endfor %}
 
           {% if p >= page_max %}
