--- a/layout.html
+++ b/layout.html
@@ -62,6 +62,7 @@
                 <li>友情链接:</li>
                 <li><a href="https://bitibiti.com">悖论の小黑屋</a></li>
               </ul>
+              <p class="copyright">Copyright © 2015 <a href="https://bitibiti.com">beilun</a> All Rights Reserved</p>
             </div>
             <div class="col-sm-6">
               <ul class="touchus list-unstyled list-inline">
